--- a/style.css
+++ b/style.css
@@ -3,12 +3,15 @@ div{
 	padding: 0;
 	margin: 0 auto;
 }
-h2{
+h2,input,button{
 	text-align:center;
+}
+#vd{
+    width: 250px;
 }
 #matrix
 {
-	width: 400px;
+    width: 400px;
 	height: 400px;
 	border-top: 1px solid #999;
 	border-left: 1px solid #999;	
