--- a/style2.css
+++ b/style2.css
@@ -1,5 +1,5 @@
 td{
-	border: 1px solid blue;
+	border: 1px solid gray;
     text-align:center;
 
 }
@@ -15,4 +15,9 @@ td.name{
 }
 td.highlight {
 	border: 1px solid red;
+}
+div{
+    border: 1px solid black;
+    width: auto;
+    height: 40px;
 }
