--- a/style1.css
+++ b/style1.css
@@ -2,6 +2,7 @@ div{
 	margin: 0;
 	padding: 0;
 	margin: 0 auto;
+    text-align: center;
 }
 h2,input,button{
 	text-align:center;
@@ -11,8 +12,8 @@ h2,input,button{
 }
 #matrix
 {
-    width: 400px;
-	height: 400px;
+    width: 0px;
+	height: 0px;
 	border-top: 1px solid #999;
 	border-left: 1px solid #999;	
 }
